longhorn/base/ui/longhorn-ui.Deployment.yaml
---
# Source: longhorn/templates/deployment-ui.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/name: longhorn
    helm.sh/chart: longhorn-1.9.0
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/instance: longhorn
    app.kubernetes.io/version: v1.9.0
    app: longhorn-ui
  name: longhorn-ui
  namespace: longhorn
spec:
  replicas: 2
  selector:
    matchLabels:
      app: longhorn-ui
  template:
    metadata:
      labels:
        app.kubernetes.io/name: longhorn
        helm.sh/chart: longhorn-1.9.0
        app.kubernetes.io/managed-by: Helm
        app.kubernetes.io/instance: longhorn
        app.kubernetes.io/version: v1.9.0
        app: longhorn-ui
    spec:
      serviceAccountName: longhorn-ui-service-account
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - podAffinityTerm:
                labelSelector:
                  matchExpressions:
                    - key: app
                      operator: In
                      values:
                        - longhorn-ui
                topologyKey: kubernetes.io/hostname
              weight: 1
      containers:
        - name: longhorn-ui
          image: longhornio/longhorn-ui:v1.9.0
          imagePullPolicy: IfNotPresent
          volumeMounts:
            - name: nginx-cache
              mountPath: /var/cache/nginx/
            - name: nginx-config
              mountPath: /var/config/nginx/
            - name: var-run
              mountPath: /var/run/
          ports:
            - containerPort: 8000
              name: http
      volumes:
        - emptyDir: {}
          name: nginx-cache
        - emptyDir: {}
          name: nginx-config
        - emptyDir: {}
          name: var-run
      priorityClassName: "longhorn-critical"
