longhorn/base/ui/longhorn-frontend.Service.yaml
---
# Source: longhorn/templates/deployment-ui.yaml
kind: Service
apiVersion: v1
metadata:
  labels:
    app.kubernetes.io/name: longhorn
    helm.sh/chart: longhorn-1.9.0
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/instance: longhorn
    app.kubernetes.io/version: v1.9.0
    app: longhorn-ui
  name: longhorn-frontend
  namespace: longhorn
spec:
  type: ClusterIP
  selector:
    app: longhorn-ui
  ports:
    - name: http
      port: 80
      targetPort: http
      nodePort: null
