longhorn/base/ui/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: longhorn
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/force-ssl-redirect: 'false'
    cert-manager.io/issuer: "cluster-issuer-selfsigned" 
    cert-manager.io/issuer-kind: "ClusterIssuer"
    metallb.uniberse.tf/address-pool: default
    prometheus.io/scrape: "true"
spec:
  ingressClassName: nginx
  rules:
  - host: longhorn.k3s
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: longhorn-ui
              port:
                name: http
  tls:
    - hosts:
        - longhorn.k3s
      secretName: longhorn.k3s.cloud-tls
